hphp/test/zend/good/ext/mysqli/tests/bug46109.php
<?php
	require_once("connect.inc");

	$mysqli = new mysqli();
	$mysqli->init();
	$mysqli->init();
	echo "done";
?>