hphp/test/zend/bad/ext/ldap/tests/ldap_count_entries_error.php
<?php
require "connect.inc";

$link = ldap_connect($host, $port);
var_dump(ldap_count_entries($link));
var_dump(ldap_count_entries($link, $link));
?>
===DONE===